--- a/app/application/index/view/public/chat.html
+++ b/app/application/index/view/public/chat.html
@@ -92,9 +92,8 @@
         var nums = $("#msg_nums").text();
         $("#msg_nums").text(parseInt(nums)+1).css("display","block");
         //追加声音
-        $("body").append("<audio autoplay='true' src='/public/static/default/default.mp3'></audio>");
-        setTimeout(function(){
-            $("audio").remove();
-        }, 2000);
+        var audio = new Audio();
+        audio.src="/public/static/default/default.mp3";
+        audio.play();
     }
 </script>
