--- a/app/application/index/view/index/index.html
+++ b/app/application/index/view/index/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body class="login-body">
 	<{if !$is_h5_plus }>
-		<style>
+		<!--<style>
 			.down_app{display: flex;justify-content: space-between;padding:5px 10px;background: rgba(0,0,0,0.7);position: fixed;top:0;left:0;width:100%;z-index:100;}
 			.down_app img{display: inline-block;width: 185px;}
 			.down_app a{display: inline-block;width: 30px;background: url("https://partyings.com/apk/close_btn.png") 0 8px no-repeat;background-size: 100%;}
@@ -21,7 +21,7 @@
 		<div class="down_app">
 			<img src="https://partyings.com/apk/download_logo.png" alt="Download APP"  onclick="location.href='https://partyings.com/apk/partyings-1.0.0.apk'">
 			<a href="javascript:;" onclick="$('.down_app').toggle();"></a>
-		</div>
+		</div>-->
 	<{/if}>
 		<div class="change-lang">
 			<{$lang}>
