--- a/app/application/index/view/recharge/index.html
+++ b/app/application/index/view/recharge/index.html
@@ -75,15 +75,16 @@
             <div class="mui-card-content">
                 <div class="mui-row" id="pay_list">
                     <div class="mui-col-sm-6 mui-col-xs-6">
-                        <img src="<{:config('skin_path')}>/images/vml.png" alt="lianyin" class="pay_type active">
+                        <img src="<{:config('skin_path')}>/images/vm.png" alt="lianyin" class="pay_type active">
                     </div>
 
                     <div class="mui-col-sm-6 mui-col-xs-6">
                         <img src="<{:config('skin_path')}>/images/fuHui.png" alt="yingfu" class="pay_type">
                     </div>
                     <div class="mui-col-sm-6 mui-col-xs-6">
-                        <img src="<{:config('skin_path')}>/images/vm.png" alt="lianyin2" class="pay_type">
+                        <img src="<{:config('skin_path')}>/images/vml.png" alt="lianyin2" class="pay_type ">
                     </div>
+
                 </div>
             </div>
         </div>
