修复域名错误

--- a/app/application/index/view/home/index.html
+++ b/app/application/index/view/home/index.html
@@ -379,7 +379,7 @@
 
 
 
-							$(".photo_frame").attr("src","http://jyo.henangaodu.com/"+$(".photo_frame").attr("src"));
+							$(".photo_frame").attr("src","https://partyings.com/"+$(".photo_frame").attr("src"));
 
 						});
 
