--- a/app/application/index/view/profile/mood.html
+++ b/app/application/index/view/profile/mood.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_537983_p50sudb7q2xogvi.css"/>
 		<link rel="stylesheet" type="text/css" href="<{:config('skin_path')}>/css/user.css">
 		<style type="text/css">
-			.user_ico{
+			.user_ico{h
 				width: 100%;
 				overflow: hidden;
 				position: relative;
@@ -153,7 +153,7 @@
 								next(html,page<res.pages);
 							});
 
-							$(".photo_frame").attr("src","http://jyo.henangaodu.com/"+$(".photo_frame").attr("src"));
+							$(".photo_frame").attr("src","https://partyings.com/"+$(".photo_frame").attr("src"));
 						});
 					}
 				};
