--- a/app/application/index/view/search/index.html
+++ b/app/application/index/view/search/index.html
@@ -5,7 +5,7 @@
 	<meta content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
 	<meta name="apple-mobile-web-app-capable" content="no" />
 	<meta name="format-detection" content="telephone=no,email=no,adress=no"/>
-	<title>jyo.henangaodu.com</title>
+	<title>Search for friends</title>
 	<link href="<{:config('skin_path')}>/css/mui.min.css" rel="stylesheet" />
 	<style type="text/css">
 		.mui-icon-plus{
