--- a/app/application/index/view/photo/index.html
+++ b/app/application/index/view/photo/index.html
@@ -40,7 +40,7 @@
 			<div class="mui-row" style="margin:10px 0;padding:10px 10px 10px;background:#fff;" id="list">
 				<{volist name="photo_list" id="vo"}>
 				<div class="mui-col-xs-4 img_div" >
-					<img src="http://jyo.henangaodu.com/<{$vo.photo_src|default='uploadfiles/album/logo.jpg'}>" alt="">
+					<img src="https://partyings.com/<{$vo.photo_src|default='uploadfiles/album/logo.jpg'}>" alt="">
 					<span class="mui-icon mui-icon-closeempty del" data-id="<{$vo.photo_id}>"></span>
 				</div>
 				<{/volist}>
